--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <!-- charting libs -->
-  <script src="/chartkick.js" type="text/javascript"></script>
-  <script src="/highcharts.js" type="text/javascript"></script>
-  <br>
+  <a href="/">Home</a> <!-- charting libs -->
+   <script src="/chartkick.js" type="text/javascript">
+</script><script src="/highcharts.js" type="text/javascript">
+</script><br>
   <%= yield %>
 </body>
 </html>
